[package]
name = "enumerate"
version = "0.2.0"
authors = ["isaacthefallenapple <isaacthefallenapple@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
trybuild = "1.0.31"

[dependencies]
syn = { version = "1.0.38", features = ["extra-traits"] }
quote = "1.0.7"
proc-macro2 = "1.0.19"